# uc-intg-htpc

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  htpc_agent.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml
agents/: README_Agent.md  htpc_agent.py
uc_intg_htpc/: __init__.py  __main__.py  client.py  config.py  const.py  device.py  driver.py  media_player.py  remote.py  sensor.py  setup.py  setup_flow.py
