[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-htpc"
dynamic = ["version"]
description = "HTPC System Monitor Integration for Unfolded Circle Remote Two/3"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MPL-2.0" }
authors = [
    { name = "Meir Miyara", email = "meir.miyara@gmail.com" }
]
keywords = ["unfoldedcircle", "integration", "htpc", "librehardwaremonitor", "system-monitor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL-2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "ucapi>=0.3.1",
    "aiohttp>=3.8.0",
    "certifi>=2023.5.7",
    "wakeonlan>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "pylint>=2.17.5",
]

[project.urls]
Homepage = "https://github.com/mase1981/uc-intg-htpc"
Documentation = "https://github.com/mase1981/uc-intg-htpc/blob/main/README.md"
Repository = "https://github.com/mase1981/uc-intg-htpc"
Issues = "https://github.com/mase1981/uc-intg-htpc/issues"

[tool.setuptools]
packages = ["uc_intg_htpc"]

[tool.setuptools.package-data]
uc_intg_htpc = ["icons/*.png"]

[tool.setuptools.dynamic]
version = {attr = "uc_intg_htpc.__version__"}

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
]